src-tauri/tests/snapshots/wire_format__ui_mutation_event_workspace_deleted.snap
---
source: tests/wire_format.rs
expression: "serde_json::to_value(&event).unwrap()"
---
{
  "id": "w1",
  "kind": "workspace_deleted",
  "project_id": "p1"
}
