src-tauri/tests/snapshots/wire_format__ui_mutation_github_data_changed.snap
---
source: tests/wire_format.rs
assertion_line: 362
expression: "serde_json::to_value(&event).unwrap()"
---
{
  "kind": "github_data_changed",
  "repo": "octocat/Hello-World"
}
