src-tauri/tests/snapshots/wire_format__ui_mutation_github_identity_changed.snap
---
source: tests/wire_format.rs
assertion_line: 350
expression: "serde_json::to_value(UiMutationEvent::GithubIdentityChanged).unwrap()"
---
{
  "kind": "github_identity_changed"
}
