src-tauri/tests/snapshots/wire_format__unsubscribe_ui_mutations_request_args.snap
---
source: tests/wire_format.rs
assertion_line: 158
expression: request_args
---
{
  "subId": "renderer-1"
}
