src-tauri/tests/snapshots/wire_format__update_event_available.snap
---
source: tests/wire_format.rs
assertion_line: 282
expression: "serde_json::to_value(&event).unwrap()"
---
{
  "kind": "available",
  "notes": "Bug fixes",
  "version": "0.2.0"
}
