src-tauri/tests/snapshots/wire_format__update_event_checking.snap
---
source: tests/wire_format.rs
assertion_line: 260
expression: "serde_json::to_value(&event).unwrap()"
---
{
  "kind": "checking",
  "reason": "manual"
}
