src-tauri/tests/snapshots/wire_format__update_event_downloading.snap
---
source: tests/wire_format.rs
assertion_line: 292
expression: "serde_json::to_value(&event).unwrap()"
---
{
  "kind": "downloading",
  "progress": 0.42
}
