src-tauri/tests/snapshots/wire_format__update_event_up_to_date.snap
---
source: tests/wire_format.rs
assertion_line: 269
expression: "serde_json::to_value(UpdateEvent::UpToDate).unwrap()"
---
{
  "kind": "up_to_date"
}
